unpackaged/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <label>Assessment</label>
    <nameField>
        <displayFormat>CCIAF{0000}</displayFormat>
        <label>Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>