unpackaged/main/default/objects/Assessment__c/fields/Internal_Reference__c.field-meta.xml
<CustomField>
    <fullName>Internal_Reference__c</fullName>
    <label>Internal Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>