unpackaged/main/default/objects/Assessment__c/fields/Metadata_Definition__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Definition__c</fullName>
    <label>Metadata Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>