unpackaged/main/default/objects/Assessment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Process opens</fullName>
                <default>true</default>
                <label>Process opens</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Internal checks</fullName>
            </value>
            <value>
                <fullName>In peer review</fullName>
            </value>
            <value>
                <fullName>Submitted to Cabinet Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>